--- a/restaurant/build.properties
+++ b/restaurant/build.properties
@@ -1,10 +1,10 @@
-tomee.dir=D:\\Projects\\ISA\\Examples-Workspace\\apache-tomee-plus-1.5.0
+tomee.dir=/home/authorit0/ISA/apache-tomee-plus-1.5.0/
 dirname=restaurant
 warname=restaurant.war
 jarname=restaurant.jar
 earname=restaurant.ear
 
 db.driver=com.mysql.jdbc.Driver
-db.connectionString=jdbc:mysql://192.168.0.2:3306/restaurant
-db.username=root
-db.password=root
+db.connectionString=jdbc:mysql://127.0.0.1:3306/restaurant
+db.username=restaurant
+db.password=restaurant
