--- a/restaurant/web/WEB-INF/web.xml
+++ b/restaurant/web/WEB-INF/web.xml
@@ -1,9 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+   
+   <servlet>
+      <servlet-name>LogoutController</servlet-name>
+      <servlet-class>restaurant.server.servlet.LogoutController</servlet-class>
+   </servlet>
+   
+   <servlet>
+      <servlet-name>PrepareUpdateController</servlet-name>
+      <servlet-class>restaurant.server.servlet.PrepareUpdateController</servlet-class>
+   </servlet>
+   
+   <servlet>
+      <servlet-name>PrepareCreateController</servlet-name>
+      <servlet-class>restaurant.server.servlet.PrepareCreateController</servlet-class>
+   </servlet>
+   
+   <servlet>
+      <servlet-name>CreateController</servlet-name>
+      <servlet-class>restaurant.server.servlet.CreateController</servlet-class>
+   </servlet>
+   
+   <servlet>
+      <servlet-name>UpdateController</servlet-name>
+      <servlet-class>restaurant.server.servlet.UpdateController</servlet-class>
+   </servlet>
+   
+   <servlet>
+      <servlet-name>LoginController</servlet-name>
+      <servlet-class>restaurant.server.servlet.LoginController</servlet-class>
+   </servlet>
+   
+   <servlet>
+      <servlet-name>ReadController</servlet-name>
+      <servlet-class>restaurant.server.servlet.ReadController</servlet-class>
+   </servlet>
+   
+   <servlet>
+      <servlet-name>DeleteController</servlet-name>
+      <servlet-class>restaurant.server.servlet.DeleteController</servlet-class>
+   </servlet>
 
    <servlet-mapping>
+      <servlet-name>LogoutController</servlet-name>
+      <url-pattern>/LogoutController</url-pattern>
+   </servlet-mapping>
+   
+   <servlet-mapping>
+      <servlet-name>PrepareUpdateController</servlet-name>
+      <url-pattern>/PrepareUpdateController</url-pattern>
+   </servlet-mapping>
+   
+   <servlet-mapping>
+      <servlet-name>PrepareCreateController</servlet-name>
+      <url-pattern>/PrepareCreateController</url-pattern>
+   </servlet-mapping>
+   
+   <servlet-mapping>
+      <servlet-name>CreateController</servlet-name>
+      <url-pattern>/CreateController</url-pattern>
+   </servlet-mapping>
+   
+   <servlet-mapping>
+      <servlet-name>UpdateController</servlet-name>
+      <url-pattern>/UpdateController</url-pattern>
+   </servlet-mapping>
+   
+   <servlet-mapping>
       <servlet-name>LoginController</servlet-name>
-      <url-pattern>/login</url-pattern>
+      <url-pattern>/LoginController</url-pattern>
+   </servlet-mapping>
+   
+   <servlet-mapping>
+      <servlet-name>ReadController</servlet-name>
+      <url-pattern>/ReadController</url-pattern>
+   </servlet-mapping>
+   
+   <servlet-mapping>
+      <servlet-name>DeleteController</servlet-name>
+      <url-pattern>/DeleteController</url-pattern>
    </servlet-mapping>
    
    <welcome-file-list>
