Added Visit linking Table.

--- a/restaurant/build.xml
+++ b/restaurant/build.xml
@@ -158,7 +158,7 @@
 			DROP TABLE IF EXISTS TABLES_CONFIGURATION;
 			DROP TABLE IF EXISTS USER;
 			DROP TABLE IF EXISTS USER_TYPE;
-			
+			DROP TABLE IF EXISTS VISIT;
 			
 		</sql>
 	</target>
