--- a/restaurant/build.properties
+++ b/restaurant/build.properties
@@ -1,4 +1,4 @@
-tomee.dir=C:\\Users\\Misa\\Desktop\\ISA_Project\\apache-tomee-plus-1.5.0
+tomee.dir=/home/authorit0/ISA/apache-tomee-plus-1.5.0
 dirname=restaurant
 warname=restaurant.war
 jarname=restaurant.jar
@@ -6,5 +6,5 @@ earname=restaurant.ear
 
 db.driver=com.mysql.jdbc.Driver
 db.connectionString=jdbc:mysql://127.0.0.1:3306/restaurant
-db.username=root
-db.password=root
+db.username=restaurant
+db.password=restaurant
