--- a/restaurant/web/WEB-INF/web.xml
+++ b/restaurant/web/WEB-INF/web.xml
@@ -14,6 +14,36 @@
       <servlet-name>LoginController</servlet-name>
       <url-pattern>/login</url-pattern>
    </servlet-mapping>
+   
+   <servlet>
+      <display-name>createRestaurantType</display-name>
+      <servlet-name>CreateRestaurantTypeController</servlet-name>
+      <servlet-class>restaurant.server.servlet.CreateRestaurantTypeController</servlet-class>
+      <init-param>
+         <param-name>sleep-time-in-seconds</param-name>
+         <param-value>10</param-value>
+      </init-param>
+      <load-on-startup>1</load-on-startup>
+   </servlet>
+   <servlet-mapping>
+      <servlet-name>CreateRestaurantTypeController</servlet-name>
+      <url-pattern>/createRestaurantType</url-pattern>
+   </servlet-mapping>
+   
+   <servlet>
+      <display-name>logout</display-name>
+      <servlet-name>LogoutController</servlet-name>
+      <servlet-class>restaurant.server.servlet.LogoutController</servlet-class>
+      <init-param>
+         <param-name>sleep-time-in-seconds</param-name>
+         <param-value>10</param-value>
+      </init-param>
+      <load-on-startup>1</load-on-startup>
+   </servlet>
+   <servlet-mapping>
+      <servlet-name>LogoutController</servlet-name>
+      <url-pattern>/logout</url-pattern>
+   </servlet-mapping>
 
    <servlet>
       <display-name>guest</display-name>
