--- a/restaurant/web/WEB-INF/web.xml
+++ b/restaurant/web/WEB-INF/web.xml
@@ -76,7 +76,7 @@
 		<servlet-name>UpdateRestaurantTypeController</servlet-name>
 		<url-pattern>/api/restaurant-type/updateRestaurantType</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<display-name>readRestaurant</display-name>
 		<servlet-name>ReadRestaurantsController</servlet-name>
@@ -93,6 +93,36 @@
 	</servlet-mapping>
 
 	<servlet>
+		<display-name>prepareInsertRestaurant</display-name>
+		<servlet-name>PrepareInsertRestaurantController</servlet-name>
+		<servlet-class>restaurant.server.servlet.restaurants.PrepareInsertRestaurantController</servlet-class>
+		<init-param>
+			<param-name>sleep-time-in-seconds</param-name>
+			<param-value>10</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>PrepareInsertRestaurantController</servlet-name>
+		<url-pattern>/api/restaurant/prepareInsertRestaurant</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<display-name>createRestaurantController</display-name>
+		<servlet-name>CreateRestaurantController</servlet-name>
+		<servlet-class>restaurant.server.servlet.restaurants.CreateRestaurantController</servlet-class>
+		<init-param>
+			<param-name>sleep-time-in-seconds</param-name>
+			<param-value>10</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CreateRestaurantController</servlet-name>
+		<url-pattern>/api/restaurant/createRestaurant</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
 		<display-name>logout</display-name>
 		<servlet-name>LogoutController</servlet-name>
 		<servlet-class>restaurant.server.servlet.LogoutController</servlet-class>
@@ -106,6 +136,8 @@
 		<servlet-name>LogoutController</servlet-name>
 		<url-pattern>/logout</url-pattern>
 	</servlet-mapping>
+
+
 
 	<servlet>
 		<display-name>guest</display-name>
