--- a/restaurant/.classpath
+++ b/restaurant/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="lib/jackson-jaxrs-1.9.13.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-mapper-asl-1.9.13.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-xc-1.9.13.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-entitymanager-5.1.0.Final.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
