--- a/restaurant/.classpath
+++ b/restaurant/.classpath
@@ -30,5 +30,6 @@
 	<classpathentry kind="lib" path="lib/apache-tomcat-util.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.4-sources.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/scribe-1.3.0.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
