Work on user registration.

--- a/restaurant/web/WEB-INF/web.xml
+++ b/restaurant/web/WEB-INF/web.xml
@@ -239,7 +239,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>FileUploadHandler</servlet-name>
-		<url-pattern>/api/restaurant-menager/fileUpload</url-pattern>
+		<url-pattern>/fileUpload</url-pattern>
 	</servlet-mapping>
 
 	<security-constraint>
