--- a/restaurant/web/WEB-INF/web.xml
+++ b/restaurant/web/WEB-INF/web.xml
@@ -286,6 +286,52 @@
 		<servlet-name>ReadTablesConfigurationsController</servlet-name>
 		<url-pattern>/api/tables-configuration/tablesConfigurations</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<display-name>createTablesConfigurationController</display-name>
+		<servlet-name>CreateTablesConfigurationController</servlet-name>
+		<servlet-class>restaurant.server.servlet.tablesConfigurations.CreateTablesConfigurationController</servlet-class>
+		<init-param>
+			<param-name>sleep-time-in-seconds</param-name>
+			<param-value>10</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CreateTablesConfigurationController</servlet-name>
+		<url-pattern>/api/tables-configuration/createTablesConfiguration</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<display-name>readMenusController</display-name>
+		<servlet-name>ReadMenusController</servlet-name>
+		<servlet-class>restaurant.server.servlet.menus.ReadMenusController</servlet-class>
+		<init-param>
+			<param-name>sleep-time-in-seconds</param-name>
+			<param-value>10</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ReadMenusController</servlet-name>
+		<url-pattern>/api/menu/menus</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<display-name>createMenuController</display-name>
+		<servlet-name>CreateMenuController</servlet-name>
+		<servlet-class>restaurant.server.servlet.menus.CreateMenuController</servlet-class>
+		<init-param>
+			<param-name>sleep-time-in-seconds</param-name>
+			<param-value>10</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CreateMenuController</servlet-name>
+		<url-pattern>/api/menu/createMenu</url-pattern>
+	</servlet-mapping>
+	
 
 	<servlet>
 		<display-name>fileUpload</display-name>
