--- a/restaurant/web/WEB-INF/web.xml
+++ b/restaurant/web/WEB-INF/web.xml
@@ -409,7 +409,35 @@
 		<url-pattern>/api/dish/prepareUpdateDish</url-pattern>
 	</servlet-mapping>	
 	
-
+	<servlet>
+		<display-name>updateGuest</display-name>
+		<servlet-name>UpdateGuestController</servlet-name>
+		<servlet-class>restaurant.server.servlet.guests.UpdateGuestController</servlet-class>
+		<init-param>
+			<param-name>sleep-time-in-seconds</param-name>
+			<param-value>10</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UpdateGuestController</servlet-name>
+		<url-pattern>/api/guest/updateGuest</url-pattern>
+	</servlet-mapping>	
+	
+	<servlet>
+		<display-name>changePassword</display-name>
+		<servlet-name>ChangePasswordController</servlet-name>
+		<servlet-class>restaurant.server.servlet.guests.ChangePasswordController</servlet-class>
+		<init-param>
+			<param-name>sleep-time-in-seconds</param-name>
+			<param-value>10</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ChangePasswordController</servlet-name>
+		<url-pattern>/api/guest/changePassword</url-pattern>
+	</servlet-mapping>	
 
 	<servlet>
 		<display-name>fileUpload</display-name>
