--- a/restaurant/web/WEB-INF/web.xml
+++ b/restaurant/web/WEB-INF/web.xml
@@ -455,6 +455,36 @@
 	</servlet-mapping>	
 
 	<servlet>
+		<display-name>addFriend</display-name>
+		<servlet-name>AddFriendController</servlet-name>
+		<servlet-class>restaurant.server.servlet.guests.AddFriendController</servlet-class>
+		<init-param>
+			<param-name>sleep-time-in-seconds</param-name>
+			<param-value>10</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AddFriendController</servlet-name>
+		<url-pattern>/api/guest/addFriend</url-pattern>
+	</servlet-mapping>	
+	
+	<servlet>
+		<display-name>deleteFriend</display-name>
+		<servlet-name>DeleteFriendController</servlet-name>
+		<servlet-class>restaurant.server.servlet.guests.DeleteFriendController</servlet-class>
+		<init-param>
+			<param-name>sleep-time-in-seconds</param-name>
+			<param-value>10</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>DeleteFriendController</servlet-name>
+		<url-pattern>/api/guest/deleteFriend</url-pattern>
+	</servlet-mapping>	
+
+	<servlet>
 		<display-name>fileUpload</display-name>
 		<servlet-name>FileUploadHandler</servlet-name>
 		<servlet-class>restaurant.server.servlet.restaurantMenagers.FileUploadHandler</servlet-class>
