--- a/restaurant/web/WEB-INF/web.xml
+++ b/restaurant/web/WEB-INF/web.xml
@@ -483,6 +483,66 @@
 		<servlet-name>DeleteFriendController</servlet-name>
 		<url-pattern>/api/guest/deleteFriend</url-pattern>
 	</servlet-mapping>	
+	
+	<servlet>
+		<display-name>restaurants</display-name>
+		<servlet-name>ReadRestaurantsController2</servlet-name>
+		<servlet-class>restaurant.server.servlet.guests.ReadRestaurantsController</servlet-class>
+		<init-param>
+			<param-name>sleep-time-in-seconds</param-name>
+			<param-value>10</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ReadRestaurantsController2</servlet-name>
+		<url-pattern>/api/guest/restaurants</url-pattern>
+	</servlet-mapping>	
+	
+	<servlet>
+		<display-name>searchRestaurants</display-name>
+		<servlet-name>SearchRestaurantsController</servlet-name>
+		<servlet-class>restaurant.server.servlet.guests.SearchRestaurantsController</servlet-class>
+		<init-param>
+			<param-name>sleep-time-in-seconds</param-name>
+			<param-value>10</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SearchRestaurantsController</servlet-name>
+		<url-pattern>/api/guest/searchRestaurants</url-pattern>
+	</servlet-mapping>	
+	
+	<servlet>
+		<display-name>prepareReservation</display-name>
+		<servlet-name>PrepareReservationServlet</servlet-name>
+		<servlet-class>restaurant.server.servlet.guests.PrepareReservationServlet</servlet-class>
+		<init-param>
+			<param-name>sleep-time-in-seconds</param-name>
+			<param-value>10</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>PrepareReservationServlet</servlet-name>
+		<url-pattern>/api/guest/prepareReservation</url-pattern>
+	</servlet-mapping>	
+	
+	<servlet>
+		<display-name>reservationPartOne</display-name>
+		<servlet-name>ReservationPartOneController</servlet-name>
+		<servlet-class>restaurant.server.servlet.guests.ReservationPartOneController</servlet-class>
+		<init-param>
+			<param-name>sleep-time-in-seconds</param-name>
+			<param-value>10</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ReservationPartOneController</servlet-name>
+		<url-pattern>/api/guest/checkReservation</url-pattern>
+	</servlet-mapping>
 
 	<servlet>
 		<display-name>fileUpload</display-name>
