--- a/restaurant/web/WEB-INF/web.xml
+++ b/restaurant/web/WEB-INF/web.xml
@@ -617,6 +617,21 @@
 	<servlet-mapping>
 		<servlet-name>InvitationDecisionController</servlet-name>
 		<url-pattern>/api/guest/invitationDecision</url-pattern>
+	</servlet-mapping>	
+	
+	<servlet>
+		<display-name>giveRestaurantAName</display-name>
+		<servlet-name>GiveRestaurantAGradeController</servlet-name>
+		<servlet-class>restaurant.server.servlet.guests.GiveRestaurantAGradeController</servlet-class>
+		<init-param>
+			<param-name>sleep-time-in-seconds</param-name>
+			<param-value>10</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>GiveRestaurantAGradeController</servlet-name>
+		<url-pattern>/api/guest/grade</url-pattern>
 	</servlet-mapping>			
 
 	<servlet>
